# SyoDon

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example
.cargo/: config.toml
src/: cli.rs  config.rs  main.rs  models.rs  server.rs  service.rs  setup.rs  structs.rs
src/cli/: oauth.rs  setup.rs
src/server/: actor.rs  api.rs  inbox.rs  nodeinfo.rs  post.rs  webfinger.rs
src/server/api/: apps.rs  oauth.rs  statuses.rs
src/service/: deliver.rs  httpsig.rs  post.rs  sign_header.rs  user.rs
