[package]
name = "syodon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
rsa = "0.9.6"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
