[package]
name = "syodon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.5.1"
base64 = "0.22.0"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
markdown = "0.3.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
rsa = { version = "0.9.6", features = ["sha2"] }
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
ulid = "1.1.2"
url = { version = "2.5.0", features = ["serde"] }
